test/fail/mixed_const_mut.c4
const mut a: int = 10;
const b: mut int = 20;
const mut c: mut int = 30;
